
  * fsck.s3ql is now several orders of magnitude faster. The code has been
    optimized and some special database indices are now precalculated.

  * When running cp.s3ql, the attributes of the target directory are
    now immediately refreshed (so that e.g. ls immediately shows the
    correct number of hard links).

  * File removal is now significantly faster, since the network transactions
    are carried out asynchronously as part of the cache expiration.  
  
  * This releases includes a lot of new code, so it may be slightly
    more beta-ish than usual.
    

2010-04-04, S3QL 0.9

  * The --cachedir, --logfile, --awskey and --credfile options are gone and
    have been replaced by --homedir.

  * ~/.awssecret is no longer read, instead there is a common file with
    authentication data for all backends in ~/.s3ql/authinfo

  * The syntax for mounting S3 buckets is now s3://bucketname instead of
    just the bucket name

  * There is now an SFTP backend. Thanks to Ron Knapp <ron.siesta@gmail.com> for
    most of the code.


2010-03-07, S3QL 0.8

  * S3QL now uses Python's default unittest.py instead of shipping its own.

  * Most documentation has been moved from the Wiki into the tarball, so that
    it always corresponds to the correct version.

  * setuptools is now used for installation. This allows .egg creation, dependency
    resolution and generation of the HTML documentation.

  * The S3 part of boto has been integrated into S3QL.

2010-02-22, beta7

  * mount.s3ql no longer chdirs into / when daemonizing but into the
    cache directory.

  * Added example backup script in contrib/backup.py

  * tune.s3ql --change-passphrase is working again

  * Added testcase for tune.s3ql --change-passphrase

  * Internal S3 errors are now handled properly by retrying the upload.

2010-02-19, beta6

 * tune.s3ql --copy is now *really* working properly (brrr)

2010-02-19, beta5

 * mkfs.s3ql now makes strict checks on the bucket name
